IceCreamShop/force-app/main/default/objects/Bill__c/Bill__c.object-meta.xml
<CustomObject>
    <label>Bill</label>
    <nameField>
        <displayFormat>IN-{0}</displayFormat>
        <label>Index Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>